just writting thesis

--- a/jupyter_notebooks/datasets_benchmark.ipynb
+++ b/jupyter_notebooks/datasets_benchmark.ipynb
@@ -1494,7 +1494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('results_db1_mcc.csv')"
+    "#df.to_csv('results_db1_mcc.csv')"
    ]
   },
   {
@@ -2989,10 +2989,16 @@
     "    \\end{align}\n",
     "$$\n",
     "In our case, the constraints are being considered as the following:\n",
-    "- Minimal voltage on bus: $v_bus < 0.95 \\text{ [pu]}$ (constraint is violated if the voltage is below $0.95 \\text{ [pu]} $)\n",
-    "- Maximal voltage on bus: $v_bus > 1.05 \\text{ [pu]}$ (constraint is violated if the voltage is above $1.05 \\text{ [pu]} $)\n",
+    "- Minimal voltage on bus: $v_{bus} < 0.95 \\text{ [pu]}$ (constraint is violated if the voltage is below $0.95 \\text{ [pu]} $)\n",
+    "- Maximal voltage on bus: $v_{bus} > 1.05 \\text{ [pu]}$ (constraint is violated if the voltage is above $1.05 \\text{ [pu]} $)\n",
     "- Maximal current on line: $i_{line} > 1 \\text{ [kA]}$ (constraint is violated if the current is above $1 \\text{ [kA]} $)\n",
-    "\n",
+    "<!-- Summarize the information in the bullet points above, in the form of a latex table. -->\n",
+    "| Constraint | Description | Target |\n",
+    "|------------|-------------|--------|\n",
+    "| Minimal voltage on bus | $v_{bus} < 0.95 \\text{ [pu]}$ | $v_{bus} - 0.95 \\text{ [pu]}$ |\n",
+    "| Maximal voltage on bus | $v_{bus} > 1.05 \\text{ [pu]}$ | $1.05 \\text{ [pu]} - v_{bus}$ |\n",
+    "| Maximal current on line | $i_{line} > 1 \\text{ [kA]}$ | $i_{line} - 1 \\text{ [kA]}$ |\n",
+    "    \n",
     "The **Balanced Regression** data set is created from the **Sparse Regression data set**. It is created by taking all the rows that containt at least one constraint violation and then taking the same number of rows that do not contain any constraint violation. Finally, the **Focused Regression data set** is created by taking all the rows that contain at least one constraint violation.\n",
     "\n",
     "Since these data sets have the same number of possible negative and possible positives, all the metrics can be used to compare."
@@ -4604,7 +4610,7 @@
     "|Maximum Voltage Constraints|Balanced Classification|6971|10|\n",
     "|Minimum Voltage Constraints|Sparse Classification|45216|10|\n",
     "|Minimum Voltage Constraints|Balanced Classification|13917|10|\n",
-    "\n",
+    "<!-- Summarize the information in the table above, in a table in latex format  -->\n",
     "The **Balanced Classification data set** is created from the Sparse Classification data set. It is created by taking all the rows that containt at least one constraint violation and then taking the same number of rows that do not contain any constraint violation.\n"
    ]
   },
