--- a/jupyter_notebooks_thesis/lr_gb_regression_hybrid_metrics.ipynb
+++ b/jupyter_notebooks_thesis/lr_gb_regression_hybrid_metrics.ipynb
@@ -334,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env': venv)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -348,12 +348,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4fe4baa4d27e3b73db55d4bb4674105e8dd41faaf9e559c3cc8381041ce15293"
+    "hash": "41fc41b670b51109e2ee011a1b5078408ea127dd664427f19249a098f5086286"
    }
   }
  },
