tested static error

--- a/jupyter_notebooks_thesis/hybrid_model_joint training.ipynb
+++ b/jupyter_notebooks_thesis/hybrid_model_joint training.ipynb
@@ -1100,6 +1100,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold:  0.05260425830867303\n",
+      "true_positives_sse:  25.70673758581787\n",
+      "self.true_positives_rmse:  0.19587818932555892\n",
+      "self.hybrid_true_positives_rmse:  538.7616131518755\n",
+      "self.true_positives_ctr:  670\n"
+     ]
+    }
+   ],
+   "source": [
+    "_threshold = lambda experiment: max_u_threshold / data_max_u_sparse['scaler']['y'] if 'max_u' in experiment else min_u_threshold/ data_min_u_sparse['scaler']['y']\n",
+    "scaled_threshold = _threshold('max_u')\n",
+    "metric = metrics.Metrics()\n",
+    "metric.get_prediction_scores(pd.DataFrame(reg_result['bus_16']), pd.DataFrame(data_max_u_sparse['y_test']['bus_16']), threshold=scaled_threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05260425830867303"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pd.DataFrame(data_max_u_sparse['y_test']['bus_16'])\n",
+    "scaled_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
